Fixed font-awesome not showing up

--- a/src/assets/style/views/shopProductBuy.less
+++ b/src/assets/style/views/shopProductBuy.less
@@ -180,7 +180,7 @@ section {
             .btn-payment {
                 display: flex; 
                 margin-left: 0.5rem; 
-                justify-content: end;
+                justify-content: flex-end;
                 button {
                     padding: 10px;
                     text-transform: none;
